--- a/cat.html
+++ b/cat.html
@@ -4,6 +4,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Loki the Energic Cat</title>
+	<link rel="stylesheet" type="text/css" href="file:///C:/Users/40787/Documents/GitHub/cat/cat.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+
 </head>
 <body>
 	<!-- header element-->
@@ -20,7 +25,7 @@
              *Down below i attched a pic of my brothers and me*
 		 </p>
 		 <img src="file:///C:/Users/40787/Desktop/pisici%20400.jpg">
-		 <p>About my life</p>
+		 <h2>About my life</h2>
 		 <h2> >''<</h2>
 		 <ol>
 		 	<li> My favourite place to sleep in the whole wide world is in my parents' bed. </li>
