--- a/cat.html
+++ b/cat.html
@@ -5,9 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Loki the Energic Cat</title>
 	<link rel="stylesheet" type="text/css" href="file:///C:/Users/40787/Documents/GitHub/cat/cat.css">
+	<link rel="stylesheet" type="text/css" href="https://vivianaaaa.github.io/Loki-the-Energic-Cat/cat.html">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -38,11 +42,6 @@
 		 		<li><a href="https://en.wikipedia.org/wiki/Cat">wikky kitty</a></li>
 		 		<li><a href="https://www.nationalgeographic.com/animals/mammals/facts/domestic-cat"> cute stuff about domestic cats, and heyy i'm a domestic cat!!</a></li>
 		 	</ul>
-		 
-
-		 
-
-
 	</main>
 	<footer>
 		<p>Thank you for reading<333. This page was created by Antal Viviana as her first website project</p>
