--- a/cat. 9999.html
+++ b/cat. 9999.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Loki the Energic Cat</title>
-	<link rel="stylesheet" type="text/css" href="css/cat.css">
+	<link rel="stylesheet" type="text/css" href=".css/cat.css">
 	<link rel="stylesheet" type="text/css" href="https://vivianaaaa.github.io/Loki-the-Energic-Cat/cat.html">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
